--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
                             <h2 class="text-2xl text-center mt-4 text-white font-medium">Budget</h2>
                             <div>
                                 <div class="text-center mt-10"><label for="" class="text-white">Per Player</label>
-                                    <input type="number"
+                                    <input id="cost-per-player" type="number"
                                         class="px-3 py-1 bg-transparent border-white border text-white">
                                 </div>
                                 <div class="text-center mt-5">
-                                    <button
+                                    <button id="btn-calculate"
                                         class="bg-blue-500 hover:bg-blue-400 text-lg px-16 py-2 text-white font-semibold mb-5">Calculate</button>
                                 </div>
                                 <h2 class="text-center mt-4 text-slate-400 font-light">Player Expenses
-                                    $<span class="font-bold">00</span></h2>
+                                    $<span class="font-bold" id="players-expenses">00</span></h2>
                                 <div class="text-center mt-5"><label for="" class="text-white">Manager</label>
                                     <input type="number"
                                         class="px-3 py-1 bg-transparent border-white border text-white">
