--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                         class="px-3 py-1 bg-transparent border-white border text-white">
                                 </div>
                                 <div class="text-center mt-5">
-                                    <button
+                                    <button id="calculate-final-total"
                                         class="bg-blue-500 hover:bg-blue-400 text-lg px-16 py-2 text-white font-semibold mb-5">Calculate
                                         Total</button>
                                 </div>
