Final calculation done and validation done

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                                 <h2 class="text-center mt-4 text-slate-400 font-light">Player Expenses
                                     $<span class="font-bold" id="players-expenses">00</span></h2>
                                 <div class="text-center mt-5"><label for="" class="text-white">Manager</label>
-                                    <input type="number"
+                                    <input id="manager-expenses" type="number"
                                         class="px-3 py-1 bg-transparent border-white border text-white">
                                 </div>
                                 <div class="text-center mt-5"><label for="" class="text-white">Coach</label>
-                                    <input type="number"
+                                    <input id="coach-expenses" type="number"
                                         class="px-3 py-1 bg-transparent border-white border text-white">
                                 </div>
                                 <div class="text-center mt-5">
@@ -167,7 +167,7 @@
                                 </div>
                                 <h2 class="text-center text-slate-400 font-light">Total
                                     <span class="font-bold text-orange-600">$</span><span
-                                        class="font-bold text-orange-600">00</span>
+                                        class="font-bold text-orange-600" id="final-total">00</span>
                                 </h2>
                             </div>
                         </div>
