--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="bg-black best-cover cover-height">
             <img class="start" src="image/cover-img.png" alt="">
             <div class="title-box">
-                <h1 class="text-8xl text-orange-500 text-center font-bold">World Best Five</h1>
+                <h1 class="text-8xl text-orange-500 text-center font-bold font-style">World Best Five</h1>
                 <p class="text-white text-lg mt-8 text-center">Amet minim mollit non deserunt ullamco est sit aliqua
                     dolor
                     do amet sint.
